fixed layout issue

--- a/_work.scss
+++ b/_work.scss
@@ -5,8 +5,6 @@
     display: flex;
     flex-direction: column;
     background-color: #333333;
-    width: 100vw;
-    min-height: 100%;
     padding-bottom: 40px;
 }
 
