--- a/styles.scss
+++ b/styles.scss
@@ -15,10 +15,6 @@ html {
     font-size: 12px;
 }
 
-body {
-    width: 100vw;
-    height: 100vh;
-}
 
 .container {
     scroll-behavior: smooth;
@@ -26,6 +22,7 @@ body {
 
 #home-section {
     background-color: $terniary-color;
+    height: 100vh;
 }
 
 /* Navbar */
